# xp-pen-deco-lw

./: Cargo.toml  LICENSE  README.md  notes.md
src/: discovery.rs  events.rs  hidraw.rs  main.rs  raw_fd.rs  util.rs
src/dbus/: bluez.rs  mod.rs
